--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,16 +1,16 @@
 /*Fontes*/
-@import url('/assets/fonts/fonts.css');
+@import url('assets/fonts/fonts.css');
 
 /*Variáveis*/
-@import url('/src/css/variables.css');
+@import url('src/css/variables.css');
 
 /*Estilos Globais*/
-@import url('/src/css/global.css');
+@import url('src/css/global.css');
 
 /*Estilos Laytous*/
-@import url('/src/css/layout.css');
+@import url('src/css/layout.css');
 
-@import url('/src/css/reset.css');
+@import url('src/css/reset.css');
 
-@import url('/src/css/components/buttons.css');
+@import url('src/css/components/buttons.css');
 
