Atualiza caminhos de importação para relativos em arquivos CSS

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,14 +1,14 @@
 
 /*Variáveis*/
-@import url("/src/css/variables.css");
+@import url("../../src/css/variables.css");
 
 /*Estilos Globais*/
-@import url("/src/css/global.css");
+@import url("../../src/css/global.css");
 
 /*Estilos Laytous*/
-@import url('/src/css/layout.css');
+@import url('../../src/css/layout.css');
 
-@import url('/src/css/reset.css');
+@import url('../../src/css/reset.css');
 
-@import url('/src/css/components/buttons.css');
+@import url('../../src/css/components/buttons.css');
 
